# qiniuyun

./: .gitignore  CLAUDE.md  README.md
.github/: pull_request_template.md
backend/: .env.example  README.md  app.py  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py  cpc.py  export.py  har.py  novels.py  pipeline.py  r2.py  screenplay.py
backend/app/core/: config.py
backend/app/db/: engine.py  tables.py
backend/app/db/repository/: cpc.py  har.py  novels.py  r2.py  screenplays.py
backend/app/models/: __init__.py  cpc.py  har.py  novel.py  pipeline.py  r2.py  screenplay.py
backend/app/services/: __init__.py  cpc_service.py  export_service.py  har_service.py  llm_service.py  novel_service.py  pipeline_service.py  r2_service.py  screenplay_service.py  screenyaml.py
backend/tests/: test_cpc.py  test_export.py  test_har.py  test_health.py  test_novel_upload.py  test_pipeline.py  test_r2.py  test_screenplay_generate.py
docs/: api-contract.md  architecture.md  demo-video-script.md  development-plan.md  project-review.md  repository-setup.md  screenyaml-schema.md  submission-checklist.md  task-division-pipeline-fix.md  task-division-quality-fix.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.js  styles.css
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/har/[id]/: page.tsx
frontend/src/app/r2/[id]/: page.tsx
frontend/src/app/screenplay/[id]/: page.tsx
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
